Primera versión de búsqueda de información yaml, funciona bastante mejor que almacenar la info en json.

--- a/scrapping/Documentos/795828.yaml
+++ b/scrapping/Documentos/795828.yaml
@@ -1,8 +1,9 @@
 
+        """
         Convocatoria de ayuda o  subvención: 795828
         Enlace a convocatoria: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatorias/795828
-        Órgano convocante: FERNÁN-NÚÑEZ - AYUNTAMIENTO DE FERNÁN-NÚÑEZ
-        Enlace a sede electrónica presentación ayuda: 
+        Órgano, comunidad, autonomía, provincia o ayuntamiento convocante: FERNÁN-NÚÑEZ - AYUNTAMIENTO DE FERNÁN-NÚÑEZ
+        Enlace / url a sede electrónica presentación ayuda: 
         Fecha de recepción: 2024-11-08T15:03:45+01:00
         Tipo de ayuda: SUBVENCIÓN Y ENTREGA DINERARIA SIN CONTRAPRESTACIÓN 
         Tipo de convocatoria: Concurrencia competitiva - canónica
@@ -10,7 +11,7 @@
         Descripción: SUBVENCIONES A ENTIDADES LOCALES SIN ÁNIMO DE LUCRO PARA EL AÑO 2024
         Tipos de beneficiarios: PERSONAS JURÍDICAS QUE NO DESARROLLAN ACTIVIDAD ECONÓMICA
         Sectores involucrados: EDUCACIÓN, OTROS SERVICIOS
-        Regiones, comunidades, autonomías o provincias: ES613 - Córdoba
+        Región de impacto: ES613 - Córdoba
         Finalidad: Cultura
         Bases reguladoras: Extracto de la convocatoria de subvenciones a entidades locales sin ánimo de lucro de Fernán Núñez
         URL Bases Reguladoras: https://bop.dipucordoba.es/visor-pdf/26-02-2019/BOP-A-2019-475.pdf
@@ -21,5 +22,8 @@
         Inicio de convocatoria: Día siguiente a la  la publicacion en el BOP
         Fin de convocatoria: 10 días hábiles
         Reglamento: 
-        Documentos: Descripción: Bases reguladoras de la subvenciones a entidades locales sin animo de lucro 2024, Nombre: Bases Reguladoras Convocatoria Subvenciones sin animo de lucro2024.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795828/document/1156590 , Descripción: Documento de la convocatoria en español, Nombre: Extracto de la Convocatoria subvenciones sin ánimo de lucro 2024.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795828/document/1156584 
+        Otros documentos de la convocatoria: 
+		Descripción: Bases reguladoras de la subvenciones a entidades locales sin animo de lucro 2024, Nombre: Bases Reguladoras Convocatoria Subvenciones sin animo de lucro2024.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795828/document/1156590 , 
+		Descripción: Documento de la convocatoria en español, Nombre: Extracto de la Convocatoria subvenciones sin ánimo de lucro 2024.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795828/document/1156584 
+        """
         
