--- a/scrapping/Documentos/795851.yaml
+++ b/scrapping/Documentos/795851.yaml
@@ -1,8 +1,9 @@
 
+        """
         Convocatoria de ayuda o  subvención: 795851
         Enlace a convocatoria: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatorias/795851
-        Órgano convocante: VIGO - AYUNTAMIENTO DE VIGO
-        Enlace a sede electrónica presentación ayuda: 
+        Órgano, comunidad, autonomía, provincia o ayuntamiento convocante: VIGO - AYUNTAMIENTO DE VIGO
+        Enlace / url a sede electrónica presentación ayuda: 
         Fecha de recepción: 2024-11-08T23:14:30+01:00
         Tipo de ayuda: SUBVENCIÓN Y ENTREGA DINERARIA SIN CONTRAPRESTACIÓN 
         Tipo de convocatoria: Concurrencia competitiva - canónica
@@ -10,7 +11,7 @@
         Descripción: Subvenciones para la organización y difusión de actos sociales y encuentros vecinales para el año 2024
         Tipos de beneficiarios: PERSONAS JURÍDICAS QUE NO DESARROLLAN ACTIVIDAD ECONÓMICA
         Sectores involucrados: Actividades recreativas y de entretenimiento
-        Regiones, comunidades, autonomías o provincias: ES114 - Pontevedra
+        Región de impacto: ES114 - Pontevedra
         Finalidad: Cultura
         Bases reguladoras: BASES REGULADORAS DE LAS SUBVENCIONES PARA CONTRIBUIR A LA FINANCIACIÓN DE LOS GASTOS DE LA ORGANIZACIÓN Y DIFUSIÓN DE ACTOS SOCIALES Y ENCUENTROS VECINALES DE FOMENTO DE LA PARTICIPACIÓN CIUDADANA
         URL Bases Reguladoras: https://sede.vigo.org/expedientes//avisos/?lang=es
@@ -21,5 +22,8 @@
         Inicio de convocatoria: DESDE EL DÍA SIGUIENTE A LA PUBLICACIÓN DEL EXTRACTO DE LA CONVOCATORIA EN EL BOP
         Fin de convocatoria: 10 DÍAS NATURALES DESDE EL INICIO DEL PERÍODO DE ADMISIÓN
         Reglamento: 
-        Documentos: Descripción: Texto en otra lengua de la convocatoria, Nombre: convocatoria_actos_sociais_e_publicacions_2024124717299.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795851/document/1156765 , Descripción: Texto en castellano de la convocatoria, Nombre: Convocatoria castellano124717272.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795851/document/1156764 
+        Otros documentos de la convocatoria: 
+		Descripción: Texto en otra lengua de la convocatoria, Nombre: convocatoria_actos_sociais_e_publicacions_2024124717299.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795851/document/1156765 , 
+		Descripción: Texto en castellano de la convocatoria, Nombre: Convocatoria castellano124717272.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795851/document/1156764 
+        """
         
