--- a/scrapping/Documentos/795852.yaml
+++ b/scrapping/Documentos/795852.yaml
@@ -1,8 +1,9 @@
 
+        """
         Convocatoria de ayuda o  subvención: 795852
         Enlace a convocatoria: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatorias/795852
-        Órgano convocante: ULLDECONA - AYUNTAMIENTO DE ULLDECONA
-        Enlace a sede electrónica presentación ayuda: https://tramits.ulldecona.cat/subvencio_escola/
+        Órgano, comunidad, autonomía, provincia o ayuntamiento convocante: ULLDECONA - AYUNTAMIENTO DE ULLDECONA
+        Enlace / url a sede electrónica presentación ayuda: https://tramits.ulldecona.cat/subvencio_escola/
         Fecha de recepción: 2024-11-09T15:26:20+01:00
         Tipo de ayuda: SUBVENCIÓN Y ENTREGA DINERARIA SIN CONTRAPRESTACIÓN 
         Tipo de convocatoria: Concurrencia competitiva - canónica
@@ -10,7 +11,7 @@
         Descripción: Convocatoria de subvenciones municipales para la adquisición de material escolar (excepto libros) para los estudios de educación primaria y secundaria. Curso 2024-2025.
         Tipos de beneficiarios: PERSONAS FÍSICAS QUE NO DESARROLLAN ACTIVIDAD ECONÓMICA
         Sectores involucrados: EDUCACIÓN
-        Regiones, comunidades, autonomías o provincias: ES514 - Tarragona
+        Región de impacto: ES514 - Tarragona
         Finalidad: Educación
         Bases reguladoras: Bases reguladoras de las subvenciones municipales para la adquisición de material escolar (excepto libros) para los estudios de educación primaria y secundaria.
         URL Bases Reguladoras: https://www.diputaciodetarragona.cat/ebop/index.php?op=dwn&tipus=i&data=20171004&anyp=2017&num=08001&v=i
@@ -21,5 +22,8 @@
         Inicio de convocatoria: A partir de la publicación de la convocatoria
         Fin de convocatoria: 
         Reglamento: 
-        Documentos: Descripción: Documento de la convocatoria en lengua cooficial, Nombre: Convocatoria_catala.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795852/document/1156766 , Descripción: Documento de la convocatoria en español, Nombre: Convocatoria castella.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795852/document/1156767 
+        Otros documentos de la convocatoria: 
+		Descripción: Documento de la convocatoria en lengua cooficial, Nombre: Convocatoria_catala.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795852/document/1156766 , 
+		Descripción: Documento de la convocatoria en español, Nombre: Convocatoria castella.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795852/document/1156767 
+        """
         
