--- a/scrapping/Documentos/795854.yaml
+++ b/scrapping/Documentos/795854.yaml
@@ -1,8 +1,9 @@
 
+        """
         Convocatoria de ayuda o  subvención: 795854
         Enlace a convocatoria: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatorias/795854
-        Órgano convocante: ESTADILLA - AYUNTAMIENTO DE ESTADILLA
-        Enlace a sede electrónica presentación ayuda: https://estadilla.sedipualba.es/
+        Órgano, comunidad, autonomía, provincia o ayuntamiento convocante: ESTADILLA - AYUNTAMIENTO DE ESTADILLA
+        Enlace / url a sede electrónica presentación ayuda: https://estadilla.sedipualba.es/
         Fecha de recepción: 2024-11-10T12:42:47+01:00
         Tipo de ayuda: SUBVENCIÓN Y ENTREGA DINERARIA SIN CONTRAPRESTACIÓN 
         Tipo de convocatoria: Concurrencia competitiva - canónica
@@ -10,7 +11,7 @@
         Descripción: Ayudas a las familias 2024
         Tipos de beneficiarios: PERSONAS JURÍDICAS QUE NO DESARROLLAN ACTIVIDAD ECONÓMICA
         Sectores involucrados: OTROS SERVICIOS
-        Regiones, comunidades, autonomías o provincias: ES241 - Huesca
+        Región de impacto: ES241 - Huesca
         Finalidad: Otras actuaciones de carácter económico
         Bases reguladoras: Ayudas a las familias 2024
         URL Bases Reguladoras: https://www.estadilla.es/
@@ -21,5 +22,7 @@
         Inicio de convocatoria: 
         Fin de convocatoria: 
         Reglamento: 
-        Documentos: Descripción: Documento de la convocatoria en español, Nombre: 20241110131520436.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795854/document/1156801 
+        Otros documentos de la convocatoria: 
+		Descripción: Documento de la convocatoria en español, Nombre: 20241110131520436.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795854/document/1156801 
+        """
         
