--- a/uploaded_files/795795.yaml
+++ b/uploaded_files/795795.yaml
@@ -1,16 +1,17 @@
 
-        Convocatoria de ayuda o  subvención: 997355
-        Enlace a convocatoria: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatorias/997355
-        Órgano convocante: MURCIA - AYUNTAMIENTO DE MURCIA
-        Enlace a sede electrónica presentación ayuda: https://sede.murcia.es/areas?idCategoria=10004
+        """
+        Convocatoria de ayuda o  subvención: 795795
+        Enlace a convocatoria: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatorias/795795
+        Órgano, comunidad, autonomía, provincia o ayuntamiento convocante: MURCIA - AYUNTAMIENTO DE MURCIA
+        Enlace / url a sede electrónica presentación ayuda: https://sede.murcia.es/areas?idCategoria=10004
         Fecha de recepción: 2024-11-08T14:18:10+01:00
         Tipo de ayuda: SUBVENCIÓN Y ENTREGA DINERARIA SIN CONTRAPRESTACIÓN 
         Tipo de convocatoria: Concurrencia competitiva - canónica
-        Presupuesto total: 205000
+        Presupuesto total: 205000 Euros
         Descripción: 2024_Conc_Costes explotación taxis adaptados_2024 049 4411 47906_100217_795795
         Tipos de beneficiarios: PYME Y PERSONAS FÍSICAS QUE DESARROLLAN ACTIVIDAD ECONÓMICA
         Sectores involucrados: Otro transporte terrestre de pasajeros
-        Regiones: ES62 - REGION DE MURCIA
+        Región de impacto: ES62 - REGION DE MURCIA
         Finalidad: Subvenciones al transporte
         Bases reguladoras: ORDENANZA GENERAL DE SUBVENCIONES Y PREMIOS DEL AYUNTAMIENTO DE MURCIA
         URL Bases Reguladoras: https://www.borm.es/services/anuncio/ano/2023/numero/843/pdf
@@ -21,5 +22,8 @@
         Inicio de convocatoria: Plazo inicia el 1º dia hábil siguiente a la publicación del extracto en el BORM
         Fin de convocatoria: 10 días desde el día siguiente a la publicación del extracto en el BORM
         Reglamento: 
-        Documentos: PUBLICACION EN EL BORM, Texto en castellano de la convocatoria
+        Otros documentos de la convocatoria: 
+		Descripción: PUBLICACION EN EL BORM, Nombre: PUBLICACION_BORM.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795795/document/1159031 , 
+		Descripción: Texto en castellano de la convocatoria, Nombre: Certificado_[2024_049_000185]_-_Copia_autentica_(1).pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795795/document/1159030 
+        """
         
