--- a/uploaded_files/795802.yaml
+++ b/uploaded_files/795802.yaml
@@ -1,16 +1,17 @@
 
-        Convocatoria de ayuda o  subvención: 997362
-        Enlace a convocatoria: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatorias/997362
-        Órgano convocante: CHICLANA DE LA FRONTERA - AYUNTAMIENTO DE CHICLANA DE LA FRONTERA
-        Enlace a sede electrónica presentación ayuda: https://www.chiclana.es
+        """
+        Convocatoria de ayuda o  subvención: 795802
+        Enlace a convocatoria: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatorias/795802
+        Órgano, comunidad, autonomía, provincia o ayuntamiento convocante: CHICLANA DE LA FRONTERA - AYUNTAMIENTO DE CHICLANA DE LA FRONTERA
+        Enlace / url a sede electrónica presentación ayuda: https://www.chiclana.es
         Fecha de recepción: 2024-11-08T14:30:52+01:00
         Tipo de ayuda: SUBVENCIÓN Y ENTREGA DINERARIA SIN CONTRAPRESTACIÓN 
         Tipo de convocatoria: Concurrencia competitiva - canónica
-        Presupuesto total: 22000
+        Presupuesto total: 22000 Euros
         Descripción: CONVOCATORIA PÚBLICA DE SUBVENCIONES DE SALUD EJERCICIO 2024.
         Tipos de beneficiarios: PERSONAS FÍSICAS QUE NO DESARROLLAN ACTIVIDAD ECONÓMICA, PERSONAS JURÍDICAS QUE NO DESARROLLAN ACTIVIDAD ECONÓMICA
         Sectores involucrados: Prestación de servicios a la comunidad en general
-        Regiones: ES61 - ANDALUCIA
+        Región de impacto: ES61 - ANDALUCIA
         Finalidad: Sanidad
         Bases reguladoras: CONVOCATORIA SUBVENCIONES DELEGACIÓN DE SALUD 2024.
         URL Bases Reguladoras: https://www.chiclana.es
@@ -21,5 +22,7 @@
         Inicio de convocatoria: DÍA SIGUIENTE AL DE SU PUBLICACIÓN EN EL B.O.P. DE CÁDIZ
         Fin de convocatoria: TREINTA DÍAS NATURALES SIGUIENTE AL DE SU PUBLICACIÓN
         Reglamento: 
-        Documentos: Texto en castellano de la convocatoria
+        Otros documentos de la convocatoria: 
+		Descripción: Texto en castellano de la convocatoria, Nombre: CSV-2024_JuntaGobiernoLocal_Sanidad_2.pdf, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795802/document/1156556 
+        """
         
