--- a/uploaded_files/795817.yaml
+++ b/uploaded_files/795817.yaml
@@ -1,28 +1,26 @@
 
-        """
-        Convocatoria de ayuda o  subvención: 795817
-        Enlace a convocatoria: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatorias/795817
-        Órgano, comunidad, autonomía, provincia o ayuntamiento convocante: CABILDO INSULAR DE LA PALMA - EXCMO. CABILDO INSULAR DE LA PALMA
-        Enlace / url a sede electrónica presentación ayuda: https://sedeelectronica.cabildodelapalma.es/sta/CarpetaPublic/Login?APP_CODE=STA&PAGE_CODE=PTS2_HOME
-        Fecha de recepción: 2024-11-08T14:50:26+01:00
-        Tipo de ayuda: SUBVENCIÓN Y ENTREGA DINERARIA SIN CONTRAPRESTACIÓN 
-        Tipo de convocatoria: Concurrencia competitiva - canónica
-        Presupuesto total: 400000 Euros
-        Descripción: CONVOCATORIA, POR PROCEDIMIENTO ANTICIPADO DEL GASTO, PARA LA SELECCIÓN DE UNA ENTIDAD COLABORADORA PARA LA GESTIÓN DE LA SUBVENCIÓN DIRECTA BONO BONITO LA PALMA 2024
-        Tipos de beneficiarios: PERSONAS JURÍDICAS QUE NO DESARROLLAN ACTIVIDAD ECONÓMICA
-        Sectores involucrados: Comercio al por menor, excepto de vehículos de motor y motocicletas
-        Región de impacto: ES707 - La Palma
-        Finalidad: Comercio, Turismo y Pymes
-        Bases reguladoras: SUBVENCIÓN BONO BONITO LA PALMA 2024
-        URL Bases Reguladoras: https://www.bopsantacruzdetenerife.es/bopsc2/index.php
-        Publicación en diario oficial: Sí
-        Estado de convocatoria abierta: No
-        Fecha de inicio de solicitudes: 2024-01-01T00:00:00+01:00
-        Fecha de fin de solicitudes: 2024-12-31T00:00:00+01:00
-        Inicio de convocatoria: 
-        Fin de convocatoria: 
-        Reglamento: 
-        Otros documentos de la convocatoria: 
-		Descripción: Texto en castellano de la convocatoria, Nombre: Resolución Consejero/a de Promoción Económica.PDF, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795817/document/1156575 
-        """
+Detalle de la convocatoria de ayuda o  subvención: 795817
+Enlace a convocatoria: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatorias/795817
+Órgano, comunidad, autonomía, provincia o ayuntamiento convocante: CABILDO INSULAR DE LA PALMA - EXCMO. CABILDO INSULAR DE LA PALMA
+Enlace / url a sede electrónica presentación ayuda: https://sedeelectronica.cabildodelapalma.es/sta/CarpetaPublic/Login?APP_CODE=STA&PAGE_CODE=PTS2_HOME
+Fecha de recepción: 2024-11-08T14:50:26+01:00
+Tipo de ayuda: SUBVENCIÓN Y ENTREGA DINERARIA SIN CONTRAPRESTACIÓN 
+Tipo de convocatoria: Concurrencia competitiva - canónica
+Presupuesto total: 400000 Euros
+Descripción: CONVOCATORIA, POR PROCEDIMIENTO ANTICIPADO DEL GASTO, PARA LA SELECCIÓN DE UNA ENTIDAD COLABORADORA PARA LA GESTIÓN DE LA SUBVENCIÓN DIRECTA BONO BONITO LA PALMA 2024
+Tipos de beneficiarios: PERSONAS JURÍDICAS QUE NO DESARROLLAN ACTIVIDAD ECONÓMICA
+Sectores involucrados: Comercio al por menor, excepto de vehículos de motor y motocicletas
+Región de impacto: ES707 - La Palma
+Finalidad: Comercio, Turismo y Pymes
+Bases reguladoras: SUBVENCIÓN BONO BONITO LA PALMA 2024
+URL Bases Reguladoras: https://www.bopsantacruzdetenerife.es/bopsc2/index.php
+Publicación en diario oficial: Sí
+Estado de convocatoria abierta: No
+Fecha de inicio de solicitudes: 2024-01-01T00:00:00+01:00
+Fecha de fin de solicitudes: 2024-12-31T00:00:00+01:00
+Inicio de convocatoria: 
+Fin de convocatoria: 
+Reglamento: 
+Otros documentos de la convocatoria: 
+Descripción: Texto en castellano de la convocatoria, Nombre: Resolución Consejero/a de Promoción Económica.PDF, Enlace: https://www.pap.hacienda.gob.es/bdnstrans/GE/es/convocatoria/795817/document/1156575 
         
