--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,13 @@ pytesseract==0.3.13
 pillow==10.4.0
 opensearch-py==2.7.1
 torch==2.4.1
-numpy==2.1.3
+numpy==1.26.4
 requests==2.32.3
 ollama==0.3.3
 chromadb
 langchain_ollama
-rapidfuzz
-openai
+rapidfuzz==3.10.1
+openai==1.57.0
+langchain==0.3.9
+pydantic==2.9.2
+langchain_openai==0.2.8
